Fix style issues to fix alignment.

--- a/src/Components/ExecutionTree/ExecutionNode/ExecutionNode.scss
+++ b/src/Components/ExecutionTree/ExecutionNode/ExecutionNode.scss
@@ -3,7 +3,9 @@
     color:#d7d7d7;
     overflow:hidden;
     text-overflow: ellipsis;
-    padding-left:5px;
+    padding:0 5px;
+    display:flex;
+    flex-direction: row;
 }
 
 .abstractionRow:hover{
@@ -14,7 +16,8 @@
 .collapse-icon-container {
     width: 10px;
     color:rgb(95, 95, 95);
-    margin:5px 5px;
+    margin:0px 5px;
+    align-self: center;
 }
 
 .text-container{
@@ -42,6 +45,9 @@
     width:10px;
     display:flex;
     align-items: center;
+    .icon {
+        width:10px;
+    }
 }
 
 .disabledBreakPoint {
@@ -63,7 +69,7 @@
 .analysis-status-container{
     font-size:11px;
     color:rgb(255, 81, 81);
-    width:60px;
+    width:50px;
     display:flex;
     .message {
         align-self: center;
